# depeg-monitor

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  deploy.sh  pyproject.toml  requirements.txt
.github/: SECURITY.md
.github/workflows/: ci.yml
checks/: erc20_approval_race.py
config/: default.yaml
contracts/examples/: ERC20Race.sol
deploy/: depeg-monitor.service
docs/: DEPEG_ORACLES.md
docs/patty/: Overview.md
src/depeg_monitor/: __init__.py  aggregator.py  cli.py  config.py  database_alert.py  fuzzing.py  monitor.py  observer.py  storage.py
src/depeg_monitor/alerts/: __init__.py  base.py  console.py  telegram.py  webhook.py
src/depeg_monitor/sources/: __init__.py  base.py  cex.py  curve.py  curve_pools.py  dex.py
test/: ERC20Race.t.sol
tests/: test_aggregator.py  test_cex_source.py  test_curve_source.py  test_fuzz_harness.py  test_integration.py  test_storage.py  test_telegram_alert.py
web/: README.md  index.html  indicators.js  tokens.css
web/js/: chart.js
