[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depeg-monitor"
version = "0.1.0"
dependencies = ["aiohttp>=3.9.0", "web3>=6.0.0", "pydantic>=2.0.0", "pyyaml>=6.0.0"]

[project.scripts]
depeg-monitor = "depeg_monitor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "hypothesis>=6.100"]

[tool.setuptools.packages.find]
where = ["src"]
